--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,7 @@
 		"@nestjs/terminus": "^6.5.6",
 		"@nestjs/websockets": "^6.11.8",
 		"@ntegral/nestjs-sentry": "^0.1.2",
-		"bcrypt": "^3.0.8",
+		"bcrypt": "^4.0.1",
 		"body-parser": "^1.19.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
@@ -45,6 +45,7 @@
 		"mongo-gridfs": "^1.1.0",
 		"mongoose": "^5.9.2",
 		"node-fetch": "^2.6.0",
+		"nodemailer": "^6.4.6",
 		"passport": "^0.4.1",
 		"passport-discord": "^0.1.3",
 		"passport-github": "^1.1.0",
