--- a/server/package.json
+++ b/server/package.json
@@ -45,13 +45,13 @@
 		"mongo-gridfs": "^1.1.0",
 		"mongoose": "^5.9.2",
 		"node-fetch": "^2.6.0",
-		"nodemailer": "^6.4.6",
+		"nodemailer": "6.4.4",
 		"passport": "^0.4.1",
 		"passport-discord": "^0.1.3",
 		"passport-github": "^1.1.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.0",
-		"puppeteer": "^2.1.1",
+		"puppeteer": "2.1.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.4",
 		"rxjs-stream": "^3.1.1",
