--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
 		"body-parser": "^1.19.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
+		"color-convert": "^2.0.1",
 		"compression": "^1.7.4",
 		"escape-string-regexp": "^2.0.0",
 		"express": "^4.17.1",
@@ -55,6 +56,7 @@
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.4",
 		"rxjs-stream": "^3.1.1",
+		"seed-random": "^2.2.0",
 		"sharp": "^0.24.1",
 		"swagger-ui-express": "^4.1.3",
 		"uuid": "^3.4.0",
