--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
 		"class-validator": "^0.11.0",
 		"color-convert": "^2.0.1",
 		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.5",
 		"escape-string-regexp": "^2.0.0",
 		"express": "^4.17.1",
 		"ftp-srv": "^4.3.1",
