--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
 		"@nestjs/terminus": "^7.0.1",
 		"@nestjs/websockets": "^7.0.11",
 		"@ntegral/nestjs-sentry": "^1.0.3",
+		"base-x": "^3.0.8",
 		"bcrypt": "^4.0.1",
 		"body-parser": "^1.19.0",
 		"class-transformer": "^0.2.3",
