--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
 		"ftp-srv": "^4.3.1",
 		"handlebars": "^4.7.6",
 		"helmet": "^3.22.0",
+		"jszip": "^3.5.0",
 		"mailchecker": "^3.3.4",
 		"mime-types": "^2.1.27",
 		"mongo-gridfs": "^1.1.0",
