--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,7 +23,11 @@
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
 						"aot": true,
-						"assets": ["src/favicon.png", "src/assets"],
+						"assets": [
+							"src/assets",
+							"src/favicon.png",
+							"src/manifest.json"
+						],
 						"styles": ["src/styles.scss"],
 						"stylePreprocessorOptions": {
 							"includePaths": ["node_modules/"]
