--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,8 @@
 						"assets": [
 							"src/assets",
 							"src/favicon.png",
-							"src/manifest.json"
+							"src/manifest.json",
+							"src/sitemap.xml"
 						],
 						"styles": ["src/styles.scss"],
 						"stylePreprocessorOptions": {
