--- a/server/package.json
+++ b/server/package.json
@@ -7,96 +7,96 @@
 		"test:cov": "jest --coverage"
 	},
 	"dependencies": {
-		"@babel/core": "^7.9.6",
-		"@babel/plugin-proposal-class-properties": "^7.8.3",
-		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-		"@babel/plugin-proposal-optional-chaining": "^7.9.0",
-		"@babel/plugin-proposal-pipeline-operator": "^7.8.3",
-		"@babel/preset-env": "^7.9.6",
-		"@babel/preset-typescript": "^7.9.0",
-		"@google-cloud/storage": "^5.0.0",
-		"@nest-modules/mailer": "^1.3.22",
-		"@nestjs/common": "^7.0.11",
-		"@nestjs/core": "^7.0.11",
-		"@nestjs/jwt": "^7.0.0",
-		"@nestjs/mongoose": "^7.0.1",
-		"@nestjs/ng-universal": "^3.1.0",
-		"@nestjs/passport": "^7.0.0",
-		"@nestjs/platform-express": "^7.0.11",
-		"@nestjs/platform-socket.io": "^7.0.11",
-		"@nestjs/swagger": "^4.5.5",
-		"@nestjs/terminus": "^7.0.1",
-		"@nestjs/websockets": "^7.0.11",
-		"@ntegral/nestjs-sentry": "^1.0.3",
-		"base-x": "^3.0.8",
-		"bcrypt": "^4.0.1",
-		"body-parser": "^1.19.0",
-		"class-transformer": "^0.2.3",
-		"class-validator": "^0.12.2",
-		"color-convert": "^2.0.1",
-		"compression": "^1.7.4",
-		"cookie-parser": "^1.4.5",
-		"escape-string-regexp": "^4.0.0",
-		"express": "^4.17.1",
-		"ftp-srv": "^4.3.1",
-		"handlebars": "^4.7.6",
-		"helmet": "^3.22.0",
-		"jszip": "^3.5.0",
-		"mailchecker": "^3.3.4",
-		"mime-types": "^2.1.27",
-		"mongo-gridfs": "^1.1.0",
-		"mongoose": "^5.9.14",
-		"node-fetch": "^2.6.0",
-		"nodemailer": "6.4.6",
-		"passport": "^0.4.1",
-		"passport-discord": "^0.1.3",
-		"passport-github": "^1.1.0",
-		"passport-google-oauth20": "^2.0.0",
-		"passport-jwt": "^4.0.0",
-		"puppeteer": "3.0.4",
-		"reflect-metadata": "^0.1.13",
-		"rxjs": "^6.5.5",
-		"rxjs-stream": "^3.2.1",
-		"seed-random": "^2.2.0",
-		"sharp": "^0.25.2",
-		"swagger-ui-express": "^4.1.4",
-		"uuid": "^8.0.0",
-		"validator": "^13.0.0",
-		"webdav-server": "^2.6.2",
-		"yaml": "^1.9.2",
-		"zone.js": "^0.10.3"
+		"@babel/core": "7.11.1",
+		"@babel/plugin-proposal-class-properties": "7.10.4",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "7.10.4",
+		"@babel/plugin-proposal-optional-chaining": "7.11.0",
+		"@babel/plugin-proposal-pipeline-operator": "7.10.5",
+		"@babel/preset-env": "7.11.0",
+		"@babel/preset-typescript": "7.10.4",
+		"@google-cloud/storage": "5.2.0",
+		"@nest-modules/mailer": "1.3.22",
+		"@nestjs/common": "7.4.2",
+		"@nestjs/core": "7.4.2",
+		"@nestjs/jwt": "7.1.0",
+		"@nestjs/mongoose": "7.0.2",
+		"@nestjs/ng-universal": "4.0.1",
+		"@nestjs/passport": "7.1.0",
+		"@nestjs/platform-express": "7.4.2",
+		"@nestjs/platform-socket.io": "7.4.2",
+		"@nestjs/swagger": "4.5.12",
+		"@nestjs/terminus": "7.0.1",
+		"@nestjs/websockets": "7.4.2",
+		"@ntegral/nestjs-sentry": "1.0.3",
+		"base-x": "3.0.8",
+		"bcrypt": "5.0.0",
+		"body-parser": "1.19.0",
+		"class-transformer": "0.3.1",
+		"class-validator": "0.12.2",
+		"color-convert": "2.0.1",
+		"compression": "1.7.4",
+		"cookie-parser": "1.4.5",
+		"escape-string-regexp": "4.0.0",
+		"express": "4.17.1",
+		"ftp-srv": "4.3.3",
+		"handlebars": "4.7.6",
+		"helmet": "4.0.0",
+		"jszip": "3.5.0",
+		"mailchecker": "3.3.12",
+		"mime-types": "2.1.27",
+		"mongo-gridfs": "1.1.0",
+		"mongoose": "5.9.28",
+		"node-fetch": "2.6.0",
+		"nodemailer": "6.4.11",
+		"passport": "0.4.1",
+		"passport-discord": "0.1.4",
+		"passport-github": "1.1.0",
+		"passport-google-oauth20": "2.0.0",
+		"passport-jwt": "4.0.0",
+		"puppeteer": "5.2.1",
+		"reflect-metadata": "0.1.13",
+		"rxjs": "6.6.2",
+		"rxjs-stream": "3.2.1",
+		"seed-random": "2.2.0",
+		"sharp": "0.25.4",
+		"swagger-ui-express": "4.1.4",
+		"uuid": "8.3.0",
+		"validator": "13.1.1",
+		"webdav-server": "2.6.2",
+		"yaml": "1.10.0",
+		"zone.js": "0.10.3"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^7.1.5",
-		"@nestjs/schematics": "^7.0.0",
-		"@nestjs/testing": "^7.0.11",
-		"@types/bcrypt": "^3.0.0",
-		"@types/express": "^4.17.6",
-		"@types/express-serve-static-core": "^4.17.7",
-		"@types/jest": "^25.2.2",
-		"@types/mongoose": "^5.7.19",
-		"@types/node": "^14.0.1",
-		"@types/node-fetch": "^2.5.7",
-		"@types/passport-jwt": "^3.0.3",
-		"@types/puppeteer": "^2.1.0",
-		"@types/sharp": "^0.25.0",
-		"@types/socket.io": "^2.1.4",
-		"@types/supertest": "^2.0.9",
-		"@types/uuid": "^7.0.3",
-		"@types/yaml": "^1.9.7",
-		"cross-env": "^7.0.2",
-		"jest": "^26.0.1",
-		"jest-junit": "^10.0.0",
-		"mongodb-memory-server": "^6.6.0",
-		"prettier": "^2.0.5",
-		"rimraf": "^3.0.2",
-		"supertest": "^4.0.2",
-		"ts-jest": "^25.5.1",
-		"ts-loader": "^7.0.4",
-		"ts-node": "^8.10.1",
-		"tsconfig-paths": "^3.9.0",
-		"tslint": "^6.1.2",
-		"typescript": "^3.9.2"
+		"@nestjs/cli": "7.4.1",
+		"@nestjs/schematics": "7.0.1",
+		"@nestjs/testing": "7.4.2",
+		"@types/bcrypt": "3.0.0",
+		"@types/express": "4.17.7",
+		"@types/express-serve-static-core": "4.17.9",
+		"@types/jest": "26.0.9",
+		"@types/mongoose": "5.7.36",
+		"@types/node": "14.0.1",
+		"@types/node-fetch": "2.5.7",
+		"@types/passport-jwt": "3.0.3",
+		"@types/puppeteer": "3.0.1",
+		"@types/sharp": "0.25.1",
+		"@types/socket.io": "2.1.11",
+		"@types/supertest": "2.0.10",
+		"@types/uuid": "8.3.0",
+		"@types/yaml": "1.9.7",
+		"cross-env": "7.0.2",
+		"jest": "26.4.0",
+		"jest-junit": "11.1.0",
+		"mongodb-memory-server": "6.6.3",
+		"prettier": "2.0.5",
+		"rimraf": "3.0.2",
+		"supertest": "4.0.2",
+		"ts-jest": "26.2.0",
+		"ts-loader": "8.0.2",
+		"ts-node": "8.10.2",
+		"tsconfig-paths": "3.9.0",
+		"tslint": "6.1.3",
+		"typescript": "3.9.7"
 	},
 	"jest": {
 		"moduleFileExtensions": [
@@ -107,7 +107,7 @@
 		"rootDir": "src",
 		"testRegex": ".spec.ts$",
 		"transform": {
-			"^.+\\.(t|j)s$": "ts-jest"
+			".+\\.(t|j)s$": "ts-jest"
 		},
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node",
