--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -49,7 +49,12 @@
 							"src/assets",
 							"src/favicon.png",
 							"src/manifest.json",
-							"src/sitemap.xml"
+							"src/sitemap.xml",
+							{
+								"glob": "**/*",
+								"input": "node_modules/monaco-editor/",
+								"output": "./assets/monaco-editor"
+							}
 						],
 						"styles": ["src/styles.scss"],
 						"stylePreprocessorOptions": {
