--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
 		"mongoose": "5.9.28",
 		"node-fetch": "2.6.0",
 		"nodemailer": "6.4.11",
+		"openssl-wrapper": "^0.3.4",
 		"passport": "0.4.1",
 		"passport-discord": "0.1.4",
 		"passport-github": "1.1.0",
