Moved build into Docker file with multi stage build steps

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,3 +1,8 @@
 **
-!app/**
-!Dockerfile
+!build.sh
+!server/**
+!frontend/**
+server/node_modules
+server/dist
+frontend/node_modules
+frontend/dist
