--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,27 @@ server tests:
         reports:
             junit: server/junit.xml
 
+build all:
+    stage: build
+    image: node:lts
+
+    needs:
+        - server tests
+
+    cache:
+        policy: pull
+        paths:
+            - server/node_modules/
+            - frontend/node_modules/
+
+    script:
+        - ./build.sh
+
+    artifacts:
+        expire_in: 7 days
+        paths:
+            - app
+
 # deploy docker image:
 #     stage: deploy
 #     image: docker:latest
