--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,8 +133,12 @@ deploy eb:
 
     # https://dba-presents.com/index.php/cloud/amazon-web-services/224-deployment-to-aws-elastic-beanstalk-with-gitlab-ci-cd
     script:
-        - pip install awscli awsebcli
-        - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-        - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+        - pip install awsebcli
+
+        - mkdir -p ~/.aws/
+        - echo "[profile eb-cli]" > ~/.aws/config
+        - echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/config
+        - echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
+
         - yes n | eb init tivolicloud -r us-east-1 # no codecommit
         - eb deploy metaverse
