--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,5 +140,6 @@ deploy eb:
         - echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/config
         - echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
 
+        - git checkout master # WARNING: Git is in a detached head state. Using branch "default".
         - yes n | eb init tivolicloud -r us-east-1 # no codecommit
         - eb deploy metaverse
