Finished fixing pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,7 +140,9 @@ deploy eb:
         - echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/config
         - echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
 
-        - git checkout master # WARNING: Git is in a detached head state. Using branch "default".
+        # WARNING: Git is in a detached head state. Using branch "default".
+        - git checkout master
+        - git pull
         # no codecommit
         - yes n | eb init tivolicloud -r us-east-1 || if [ $? -eq 1 ]; then echo ""; else echo ""; fi
         - eb deploy metaverse
