--- a/.ebextensions/01-commands.conf
+++ b/.ebextensions/01-commands.conf
@@ -1,4 +1,5 @@
 commands:
-    00001_add_port_mapping:
-        cwd: /tmp
+    00001_expose_tea_port:
         command: 'sed -i "s/docker run -d/docker run -p 17486:17486 -d/" /opt/elasticbeanstalk/hooks/appdeploy/enact/00run.sh'
+    00001_expose_tea_port_again:
+        command: 'sed -i "s/docker run -d/docker run -p 17486:17486 -d/" /opt/elasticbeanstalk/hooks/appdeploy/pre/04run.sh'
