Updated upload limit ebextensions

--- a/.ebextensions/upload-limit.conf
+++ b/.ebextensions/upload-limit.conf
@@ -1,10 +1,5 @@
-files:
-    /etc/nginx/conf.d/upload-limit.conf:
-        mode: "000644"
-        owner: root
-        group: root 
-        content: |
-            client_max_body_size 50M;
-container_commands:
-	reload_nginx:
-		command: "systemctl reload nginx"
+commands:
+	upload-limit:
+		command: |
+            echo "client_max_body_size 50M;" > /etc/nginx/conf.d/upload-limit.conf
+            systemctl reload nginx
