--- a/.ebextensions/increase_upload_size.config
+++ b/.ebextensions/increase_upload_size.config
@@ -1,6 +1,7 @@
 container_commands:
   01_reload_nginx:
-    command: "service nginx reload"
+    command: "sudo service nginx reload"
+
 files:
   "/etc/nginx/conf.d/proxy.conf":
     mode: "000644"
