--- a/server/package.json
+++ b/server/package.json
@@ -7,20 +7,12 @@
 		"test:cov": "jest --coverage"
 	},
 	"dependencies": {
-		"@babel/core": "7.11.1",
-		"@babel/plugin-proposal-class-properties": "7.10.4",
-		"@babel/plugin-proposal-nullish-coalescing-operator": "7.10.4",
-		"@babel/plugin-proposal-optional-chaining": "7.11.0",
-		"@babel/plugin-proposal-pipeline-operator": "7.10.5",
-		"@babel/preset-env": "7.11.0",
-		"@babel/preset-typescript": "7.10.4",
 		"@google-cloud/storage": "5.2.0",
 		"@nest-modules/mailer": "1.3.22",
 		"@nestjs/common": "7.4.2",
 		"@nestjs/core": "7.4.2",
 		"@nestjs/jwt": "7.1.0",
 		"@nestjs/mongoose": "7.0.2",
-		"@nestjs/ng-universal": "4.0.1",
 		"@nestjs/passport": "7.1.0",
 		"@nestjs/platform-express": "7.4.2",
 		"@nestjs/platform-socket.io": "7.4.2",
@@ -31,40 +23,37 @@
 		"base-x": "3.0.8",
 		"bcrypt": "5.0.0",
 		"body-parser": "1.19.0",
+		"bson": "4.1.0",
 		"class-transformer": "0.3.1",
 		"class-validator": "0.12.2",
 		"color-convert": "2.0.1",
-		"compression": "1.7.4",
 		"cookie-parser": "1.4.5",
 		"escape-string-regexp": "4.0.0",
 		"express": "4.17.1",
-		"ftp-srv": "4.3.3",
 		"handlebars": "4.7.6",
 		"helmet": "4.0.0",
 		"jszip": "3.5.0",
 		"mailchecker": "3.3.12",
-		"mime-types": "2.1.27",
-		"mongo-gridfs": "1.1.0",
+		"mongodb": "3.6.2",
 		"mongoose": "5.9.28",
 		"node-fetch": "2.6.0",
 		"nodemailer": "6.4.11",
-		"openssl-wrapper": "^0.3.4",
+		"openssl-wrapper": "0.3.4",
 		"passport": "0.4.1",
 		"passport-discord": "0.1.4",
 		"passport-github": "1.1.0",
 		"passport-google-oauth20": "2.0.0",
 		"passport-jwt": "4.0.0",
 		"puppeteer": "5.2.1",
-		"raw-body": "^2.4.1",
+		"raw-body": "2.4.1",
 		"reflect-metadata": "0.1.13",
 		"rxjs": "6.6.2",
 		"rxjs-stream": "3.2.1",
 		"seed-random": "2.2.0",
 		"sharp": "0.25.4",
+		"socket.io": "2.3.0",
 		"swagger-ui-express": "4.1.4",
 		"uuid": "8.3.0",
-		"validator": "13.1.1",
-		"webdav-server": "2.6.2",
 		"yaml": "1.10.0",
 		"zone.js": "0.10.3"
 	},
