--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
 		"helmet": "4.1.1",
 		"jszip": "3.5.0",
 		"mailchecker": "3.3.14",
+		"mime-db": "^1.44.0",
 		"mongodb": "3.6.2",
 		"mongoose": "5.10.5",
 		"node-fetch": "2.6.1",
