--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -8,7 +8,7 @@ DEBIAN_FRONTEND=noninteractive
 
 RUN \
 apt-get update -y && \
-apt-get install -y curl fonts-roboto fonts-noto fontconfig && \ 
+apt-get install -y curl fonts-roboto fonts-noto fontconfig python3 python3-pip && \ 
 # install nodejs
 curl -sL https://deb.nodesource.com/setup_lts.x | bash - && \
 apt-get install -y nodejs && \
@@ -19,4 +19,6 @@ fc-cache -fv && \
 # install google chrome
 curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
 apt-get install -y ./google-chrome-stable_current_amd64.deb && \
-rm -f google-chrome-stable_current_amd64.deb
+rm -f google-chrome-stable_current_amd64.deb && \
+# install python transformers
+pip3 install transformers
