--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 		"@nest-modules/mailer": "1.3.22",
 		"@nestjs/common": "7.4.4",
 		"@nestjs/core": "7.4.4",
+		"@nestjs/graphql": "^7.9.9",
 		"@nestjs/jwt": "7.1.0",
 		"@nestjs/mongoose": "7.0.2",
 		"@nestjs/passport": "7.1.0",
@@ -20,6 +21,7 @@
 		"@nestjs/terminus": "7.0.1",
 		"@nestjs/websockets": "7.4.4",
 		"@ntegral/nestjs-sentry": "1.0.4",
+		"apollo-server-express": "^2.21.0",
 		"base-x": "3.0.8",
 		"bcrypt": "5.0.0",
 		"body-parser": "1.19.0",
@@ -30,6 +32,8 @@
 		"cookie-parser": "1.4.5",
 		"escape-string-regexp": "4.0.0",
 		"express": "4.17.1",
+		"graphql": "^15.5.0",
+		"graphql-tools": "^7.0.4",
 		"handlebars": "4.7.6",
 		"helmet": "4.1.1",
 		"jszip": "3.5.0",
