--- a/server/package.json
+++ b/server/package.json
@@ -32,10 +32,12 @@
 		"cookie-parser": "1.4.5",
 		"escape-string-regexp": "4.0.0",
 		"express": "4.17.1",
+		"geoip-lite": "^1.4.2",
 		"graphql": "^15.5.0",
 		"graphql-tools": "^7.0.4",
 		"handlebars": "4.7.6",
 		"helmet": "4.1.1",
+		"iso-3166": "^3.1.0",
 		"jszip": "3.5.0",
 		"mailchecker": "3.3.14",
 		"mime-db": "^1.44.0",
@@ -58,6 +60,7 @@
 		"sharp": "0.26.0",
 		"socket.io": "2.3.0",
 		"swagger-ui-express": "4.1.4",
+		"ua-parser-js": "^0.7.24",
 		"uuid": "8.3.0",
 		"yaml": "1.10.0",
 		"zone.js": "0.11.1"
@@ -69,6 +72,7 @@
 		"@types/bcrypt": "3.0.0",
 		"@types/express": "4.17.8",
 		"@types/express-serve-static-core": "4.17.12",
+		"@types/geoip-lite": "^1.4.1",
 		"@types/jest": "26.0.13",
 		"@types/mongoose": "5.7.36",
 		"@types/node": "14.10.2",
@@ -78,6 +82,7 @@
 		"@types/sharp": "0.26.0",
 		"@types/socket.io": "2.1.11",
 		"@types/supertest": "2.0.10",
+		"@types/ua-parser-js": "^0.7.35",
 		"@types/uuid": "8.3.0",
 		"@types/yaml": "1.9.7",
 		"cross-env": "7.0.2",
