--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,8 @@
 		"outDir": "./dist",
 		"baseUrl": "./",
 		"incremental": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"resolveJsonModule": true
 	},
 	"exclude": ["node_modules", "dist"]
 }
