--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
 		"build": "ng build --prod",
 		"dev:ssr": "ng run frontend:serve-ssr",
 		"build:ssr": "ng build --prod && ng run frontend:server:production",
-		"prerender": "ng run frontend:prerender"
+		"prerender": "ng run frontend:prerender",
+		"optimize": "gulp optimize"
 	},
 	"dependencies": {
 		"@angular-devkit/build-angular": "~0.1101.4",
@@ -42,11 +43,14 @@
 		"typescript": "~4.1.3",
 		"zone.js": "~0.10.3"
 	},
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.4",
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~0.1101.4",
 		"@nguniversal/builders": "^11.1.2",
 		"@types/express": "^4.17.4",
 		"@types/socket.io-client": "^1.4.32",
+		"cwebp-bin": "^6.1.1",
+		"gulp": "^4.0.2",
+		"through2-concurrent": "^2.0.0",
 		"ts-loader": "^6.2.2",
 		"webpack-cli": "^3.3.11"
 	}
