--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
 		"cookie-parser": "1.4.5",
 		"escape-string-regexp": "4.0.0",
 		"express": "4.17.1",
+		"express-static-gzip": "^2.1.1",
 		"geoip-lite": "^1.4.2",
 		"graphql": "^15.5.0",
 		"graphql-tools": "^7.0.4",
