--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -10,13 +10,30 @@ DEBIAN_FRONTEND=noninteractive
 
 RUN \
 apt-get update -y && \
-apt-get install -y curl fonts-roboto fonts-noto fontconfig python3 python3-pip && \ 
+apt-get install -y wget curl unzip fontconfig python3 python3-pip && \ 
 # install nodejs
 curl -sL https://deb.nodesource.com/setup_lts.x | bash - && \
 apt-get install -y nodejs && \
 npm i -g yarn node-gyp pm2 && \
-# install twemoji mozilla
-curl -Lo /usr/share/fonts/truetype/TwemojiMozilla.ttf https://github.com/mozilla/twemoji-colr/releases/download/v0.5.1/TwemojiMozilla.ttf && \
+# install fonts: twemoji mozilla, roboto and noto sans
+cd /usr/share/fonts/truetype/ && \
+curl -Lo TwemojiMozilla.ttf https://github.com/mozilla/twemoji-colr/releases/download/v0.6.0/TwemojiMozilla.ttf && \
+curl -Lo Roboto.zip https://fonts.google.com/download?family=Roboto && \
+curl -Lo Noto_Sans.zip https://fonts.google.com/download?family=Noto%20Sans && \
+# these are otf but its okay they're in truetype/
+curl -Lo Noto_Sans_JP.zip https://fonts.google.com/download?family=Noto%20Sans%20JP && \
+curl -Lo Noto_Sans_KR.zip https://fonts.google.com/download?family=Noto%20Sans%20KR && \
+curl -Lo Noto_Sans_TC.zip https://fonts.google.com/download?family=Noto%20Sans%20TC && \
+curl -Lo Noto_Sans_SC.zip https://fonts.google.com/download?family=Noto%20Sans%20SC && \
+curl -Lo Noto_Sans_HK.zip https://fonts.google.com/download?family=Noto%20Sans%20HK && \
+unzip -o Roboto.zip && \
+unzip -o Noto_Sans.zip && \
+unzip -o Noto_Sans_JP.zip && \
+unzip -o Noto_Sans_KR.zip && \
+unzip -o Noto_Sans_TC.zip && \
+unzip -o Noto_Sans_SC.zip && \
+unzip -o Noto_Sans_HK.zip && \
+rm -rf *.txt *.zip && \
 fc-cache -fv && \
 # install google chrome
 curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
