--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,9 +22,6 @@
 				"@schematics/angular:interceptor": {
 					"skipTests": true
 				},
-				"@schematics/angular:module": {
-					"skipTests": true
-				},
 				"@schematics/angular:pipe": {
 					"skipTests": true
 				},
@@ -44,7 +41,6 @@
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
-						"aot": true,
 						"assets": [
 							"src/assets",
 							"src/favicon.png",
@@ -61,7 +57,13 @@
 						"stylePreprocessorOptions": {
 							"includePaths": ["node_modules/"]
 						},
-						"scripts": []
+						"scripts": [],
+						"vendorChunk": true,
+						"extractLicenses": false,
+						"buildOptimizer": false,
+						"sourceMap": true,
+						"optimization": false,
+						"namedChunks": true
 					},
 					"configurations": {
 						"production": {
@@ -91,7 +93,8 @@
 								}
 							]
 						}
-					}
+					},
+					"defaultConfiguration": ""
 				},
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
@@ -115,7 +118,9 @@
 					"options": {
 						"outputPath": "dist/server",
 						"main": "src/main.server.ts",
-						"tsConfig": "tsconfig.server.json"
+						"tsConfig": "tsconfig.server.json",
+						"sourceMap": true,
+						"optimization": false
 					},
 					"configurations": {
 						"production": {
@@ -128,7 +133,8 @@
 							"sourceMap": false,
 							"optimization": true
 						}
-					}
+					},
+					"defaultConfiguration": ""
 				},
 				"serve-ssr": {
 					"builder": "@nguniversal/builders:ssr-dev-server",
