--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,31 +2,30 @@
 	"scripts": {
 		"pre": "node download-plausible.js",
 		"start": "npm run pre && ng build --watch",
-		"build": "npm run pre && ng build --prod",
+		"build": "npm run pre && ng build --configuration production",
 		"dev:ssr": "npm run pre && ng run frontend:serve-ssr",
-		"build:ssr": "npm run pre && ng build --prod && ng run frontend:server:production",
+		"build:ssr": "npm run pre && ng build --configuration production && ng run frontend:server:production",
 		"prerender": "ng run frontend:prerender",
 		"optimize": "gulp optimize"
 	},
 	"dependencies": {
-		"@angular-devkit/build-angular": "~0.1101.4",
 		"@angular-mdc/web": "^5.1.1",
-		"@angular/animations": "~11.1.2",
-		"@angular/cdk": "~11.1.2",
-		"@angular/cli": "~11.1.4",
-		"@angular/common": "~11.1.2",
-		"@angular/compiler": "~11.1.2",
-		"@angular/compiler-cli": "~11.1.2",
-		"@angular/core": "~11.1.2",
-		"@angular/forms": "~11.1.2",
-		"@angular/language-service": "~11.1.2",
-		"@angular/material": "^11.1.2",
-		"@angular/platform-browser": "~11.1.2",
-		"@angular/platform-browser-dynamic": "~11.1.2",
-		"@angular/platform-server": "~11.1.2",
-		"@angular/router": "~11.1.2",
+		"@angular/animations": "~12.2.1",
+		"@angular/cdk": "~12.2.1",
+		"@angular/cli": "~12.2.1",
+		"@angular/common": "~12.2.1",
+		"@angular/compiler": "~12.2.1",
+		"@angular/compiler-cli": "~12.2.1",
+		"@angular/core": "~12.2.1",
+		"@angular/forms": "~12.2.1",
+		"@angular/language-service": "~12.2.1",
+		"@angular/material": "^12.2.1",
+		"@angular/platform-browser": "~12.2.1",
+		"@angular/platform-browser-dynamic": "~12.2.1",
+		"@angular/platform-server": "~12.2.1",
+		"@angular/router": "~12.2.1",
 		"@auth0/angular-jwt": "^4.0.0",
-		"@nguniversal/express-engine": "^11.1.2",
+		"@nguniversal/express-engine": "^12.1.0",
 		"@sentry/browser": "^5.15.4",
 		"@types/node": "^13.11.0",
 		"bootstrap": "^4.3.1",
@@ -41,12 +40,12 @@
 		"ts-node": "~8.8.2",
 		"tslib": "^2.0.0",
 		"tslint": "~6.1.0",
-		"typescript": "~4.1.3",
-		"zone.js": "~0.10.3"
+		"typescript": "~4.3.5",
+		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1101.4",
-		"@nguniversal/builders": "^11.1.2",
+		"@angular-devkit/build-angular": "~12.2.1",
+		"@nguniversal/builders": "^12.1.0",
 		"@types/express": "^4.17.4",
 		"@types/socket.io-client": "^1.4.32",
 		"gulp": "^4.0.2",
