--- a/server/package.json
+++ b/server/package.json
@@ -33,14 +33,13 @@
 		"escape-string-regexp": "4.0.0",
 		"express": "4.17.1",
 		"express-static-gzip": "^2.1.1",
-		"geoip-lite": "^1.4.2",
 		"graphql": "^15.5.0",
 		"graphql-tools": "^7.0.4",
 		"handlebars": "4.7.6",
 		"helmet": "4.1.1",
-		"iso-3166": "^3.1.0",
 		"jszip": "3.5.0",
 		"mailchecker": "3.3.14",
+		"maxmind": "^4.3.2",
 		"mime-db": "^1.44.0",
 		"mongodb": "3.6.2",
 		"mongoose": "5.10.7",
