--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -43,8 +43,7 @@
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
 							"src/assets",
-							"src/favicon.png",
-							"src/manifest.json",
+							"src/favicon.ico",
 							"src/sitemap.xml",
 							"src/66c2e6a0f3149850fd26.js",
 							{
